<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.farberg.scripting.sandbox</groupId>
	<artifactId>scripting-sandbox</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Java Scripting Sandbox</name>
	<url>https://github.com/pfisterer/scripting-sandbox</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<argLine>-Djava.security.manager -Djava.security.policy=src/main/java/java-all-permissions.policy</argLine>
				</configuration>
			</plugin>
			
			<!-- mvn license:check / mvn license:format -->
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<version>1.9.0</version>
				<artifactId>maven-license-plugin</artifactId>
				<configuration>
					<header>src/etc/license-header.txt</header>

					<strictCheck>true</strictCheck>

					<excludes>
						<exclude>.git/**</exclude>
						<exclude>.gitignore</exclude>
						<exclude>README.md</exclude>
					</excludes>

				</configuration>
			</plugin>
		</plugins>

		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh-external</artifactId>
				<version>1.0-beta-6</version>
			</extension>
		</extensions>
	</build>

	<dependencies>

		<dependency>
			<groupId>javax.scripting</groupId>
			<artifactId>beanshell-engine</artifactId>
			<version>20080611</version>
		</dependency>

		<dependency>
			<groupId>org.beanshell</groupId>
			<artifactId>bsh-core</artifactId>
			<version>2.0b4</version>
		</dependency>

		<dependency>
			<groupId>de.uniluebeck.itm.itmutils</groupId>
			<artifactId>itmutils</artifactId>
			<version>0.4-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.8.5</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>itm-maven-repository-releases</id>
			<url>http://www.itm.uni-luebeck.de/projects/maven/releases/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>itm-maven-repository-snapshots</id>
			<url>http://www.itm.uni-luebeck.de/projects/maven/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>Internet2</id>
			<name>Internet2</name>
			<url>http://shibboleth.internet2.edu/downloads/maven2/</url>
		</repository>

		<repository>
			<id>MavenCentral</id>
			<name>MavenCentral</name>
			<url>http://repo1.maven.org/maven2/</url>
		</repository>

	</repositories>

	<distributionManagement>

		<repository>
			<id>itm-maven-repository-releases</id>
			<name>ITM UzL Maven releases repository</name>
			<url>scpexe://itm01.itm.uni-luebeck.de/www/itm/projects/maven/releases</url>
		</repository>

		<snapshotRepository>
			<id>itm-maven-repository-snapshots</id>
			<name>ITM UzL Maven snapshots repository</name>
			<url>scpexe://itm01.itm.uni-luebeck.de/www/itm/projects/maven/snapshots</url>
		</snapshotRepository>

	</distributionManagement>

	<scm>
		<connection>scm:git:https://pfisterer@github.com/pfisterer/scripting-sandbox</connection>
	</scm>

</project>
